cabal-version: 1.12

name:           type-tensor
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/type-tensor#readme>
homepage:       https://github.com/githubuser/type-tensor#readme
bug-reports:    https://github.com/githubuser/type-tensor/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/type-tensor

library
  exposed-modules:
      TH
      Proofs
      Scalar
      Tensor
      Safe
      Example
      Basic
      Delta
      Epsilon
      Sym2
      Area
      Ansaetze
      DiffeoSymmetry
      Equations
      LinearAlgebra
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , sparse-tensor == 0.2.1.2
    , singletons >= 2.6
    , constraints
    , containers
    , text
    , mtl
    , hmatrix
  ghc-options:
      -fwarn-unused-imports
  default-language: Haskell2010

executable run
  hs-source-dirs:
      app
  main-is: Main.hs
  build-depends:
      base
    , type-tensor
    , parallel
    , mtl
  ghc-options:
    -fwarn-unused-imports
    -fwarn-unused-binds
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language: Haskell2010

test-suite test-type-tensor
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           TestMain.hs
  other-modules:
  build-depends:     base >= 4.9 && < 5,
                     mtl,
                     type-tensor
